# solutions-contrib

./: .gitignore  CHANGELOG.md  README.md  cookiecutter.json  test.py
.github/: dependabot.yml
.github/workflows/: release-tag.yml
bs-components/ui/: README.md
bs-documentation/source/: index.md
bs-infra/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
bs-infra/tests/: conftest.py  constants.py  test_dataset_service.py  test_detect_adapter.py  test_execution.py  test_fastapi_adapter.py  test_flask_adapter.py  test_request.py  test_serve_service.py
bs-infra/webaiku/: __init__.py  constants.py  errors.py  extension.py
bs-infra/webaiku/adapters/: __init__.py  base.py
bs-infra/webaiku/adapters/fastapi/: __init__.py  middleware.py
bs-infra/webaiku/adapters/flask/: __init__.py
bs-infra/webaiku/apis/dataiku/: api.py  dataset_iterator.py  dss_instance.py  filters.py  formula.py  improved_dataset.py
bs-infra/webaiku/blueprints/: __init__.py  dataiku_dataset.py  dataset.py  serve.py
bs-infra/webaiku/context/: __init__.py  execution.py
bs-infra/webaiku/core/: __init__.py  dataset.py  request.py  serve.py
bs-infra/webaiku/utils/: __init__.py  path.py  request.py
bs-templates/: cookiecutter.json
bs-templates/angular/: cookiecutter.json
bs-templates/bs/: cookiecutter.json
bs-templates/hooks/: pre_gen_project.py
bs-templates/vue/: cookiecutter.json
commons/lib/: .swp
commons/python/: caching.py  dates_handling.py  dku_utils.py  graphs_utils.py  launch_utils.py  utils.py  wsgi.py
commons/scripts/: bs_project_manager_monorepo.py  bs_projects_manager.py  init_bs_project.py  init_bs_project.sh  init_bs_project_new.py  requirements.txt
project/: ApiHelper.js  app.js  backend.py  index.css  index.html  jsconfig.json  load_utils.py  main.js  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.json  vite.config.js  wsgi.py
project/components/: App.vue  AppSecond.vue
project/fonts/: fonts.scss
project/src/: Api.js  App.vue  TableConfigurationControls.vue  app.scss  caching.py  dataiku_api.py  dataset_api.py  index.js  (+5 more)
(+421 files in other folders)
