[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "webaiku"
version = "0.1.0"
description = "Web application tools for Dataiku DSS"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Majid Boubrik" },
    { name = "Anas Laaroussi" },
    { name = "Hela Othmani" },
]
dependencies = [
    "dataiku-api-client>=11.0.0",
    "gunicorn>=23.0.0",
    "numpy<2.4",
    "pandas>=0.23.0",
    "typing-extensions>=4.1.0",
    "uvicorn-worker>=0.4.0",
]

[project.optional-dependencies]
flask = ["flask>=2.0", "werkzeug>=2.0"]
fastapi = ["fastapi>=0.100", "uvicorn[standard]>=0.23"]
all = ["webaiku[flask]", "webaiku[fastapi]"]
dev = ["webaiku[all]", "pytest>=7", "httpx>=0.24"]

[tool.setuptools.packages.find]
include = ["webaiku*"]
